--- a/locations.yml
+++ b/locations.yml
@@ -7,5 +7,6 @@ locations:
   - OPERATIONS_MODEL_PREPARED
   - SAFETRACK_PREPARED
   - SAFETRACK_RAW
+  - SHAREPOINT_RAW
   - WABTEC_PREPARED
   - WABTEC_RAW
